[gd_scene load_steps=4 format=3 uid="uid://bi7nr1odhn445"]

[ext_resource type="Script" uid="uid://b8k0mbs8b47fl" path="res://count_down_window.gd" id="1_ch44e"]
[ext_resource type="FontFile" uid="uid://dp6y5fs1725mc" path="res://Assets/Pixel_Art/Public_Pixel_Font_1_24/PublicPixel.ttf" id="1_sycn6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i0vio"]
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="CountDownWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -570.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ch44e")

[node name="GameState" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 86.0
offset_right = 20.0
offset_bottom = 109.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_sycn6")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 60.0
offset_top = 112.0
offset_right = -60.0
offset_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(75, 50)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_sycn6")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_i0vio")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CountDown3" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="CountDown3" to="." method="_on_count_down_3_timeout"]
